<resources>
    <string name="app_name">For Her App</string>
    <string name="name">Username</string>
    <string name="full_name">full name</string>
    <string name="username">username</string>
    <string name="age">Age</string>
    <string name="e_mail">e-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_sign_in">Already have an account? sign in!</string>
    <string name="for_her">For Her</string>
    <string name="publisher">#publisher</string>
    <string name="_10_likes">10 likes</string>
    <string name="_20_comments">20 comments</string>

    <string name="description">description</string>
    <string name="todo">TODO</string>
    <string name="edit_profile">edit profile</string>
    <string name="save">save</string>

    <string name="change_photo">Change Photo</string>
    <string name="change_name">Full name</string>
    <string name="_changed">User name</string>
    <string name="bio">Bio</string>
    <string name="test_question">Test question</string>
    <string name="submit">submit</string>
    <string name="qustion_text"> . qustion text.... </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wellcom">WELCOME TO :</string>
    <string name="don_t_have_an_account_sign_up">don\'t have an account? sign up!</string>
    <string name="log_in">Log In</string>
    <string name="post">posts</string>
    <string name="q1">Once I overcame breast cancer, I wasn’t afraid of anything anymore.</string>
    <string name="q2">you are so strong keep going</string>
    <string name="q3"> The only person who can save you is you.</string>
    <string name="q4">It’s about focusing on the fight and not the fright.</string>
    <string name="q5">Breast cancer changes you, and the change can be beautiful.</string>
    <string name="q6">You look so pretty too day </string>
</resources>