<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/text_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/qustion_text"
            android:textColor="#969696"
            android:textSize="20sp"
            android:translationY="10dp" />

        <CheckBox
            android:id="@+id/YES"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:fontFamily="@font/akaya_telivigala"
            android:textColor="#D658B3"
            android:textColorLink="#D658B3"
            android:translationY="10dp" />

        <CheckBox
            android:id="@+id/NO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textColor="#D658B3"
            android:fontFamily="@font/akaya_telivigala"
            android:translationY="10dp" />


    </LinearLayout>

</LinearLayout>