<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical"

    >

    <ScrollView

        android:layout_width="match_parent"
        android:paddingTop="140dp"
        android:background="#FFFFFF"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:rotation="0"
                android:rotationX="0"
                android:rotationY="0"
                android:scaleX="2"
                android:scaleY="2"
                android:src="@drawable/logo"
                app:srcCompat="@drawable/logo" />

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/editor_background"
                android:hint="@string/e_mail"
                android:fontFamily="@font/akaya_telivigala"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/pink"
                android:textColorHint="#D658B3" />

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/editor_background"
                android:hint="@string/password"
                android:fontFamily="@font/akaya_telivigala"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/pink"
                android:textColorHint="#D658B3" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:fontFamily="@font/akaya_telivigala"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_background"
                android:text="@string/log_in"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textColor="#D658B3" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>