<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="10dp"
        android:elevation="10dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:translationY="10dp">

                <ImageView
                    android:id="@+id/profile_edit_image"
                    android:layout_width="40dp"
                    android:fontFamily="@font/akaya_telivigala"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/profile" />

                <TextView
                    android:fontFamily="@font/akaya_telivigala"
                    android:id="@+id/pass_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/username"
                    android:textColor="#C80993"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:fontFamily="@font/akaya_telivigala"
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/description"
                android:textColor="#D658B3"
                android:translationY="20dp" />

            <ImageView

                android:id="@+id/more"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_more"
                android:translationX="360dp"
                android:translationY="-70dp"
                app:srcCompat="@drawable/ic_more" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/post_image"
                    android:layout_margin="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/postpicture"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/postpicture" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/editor_background">

                <ImageView
                    android:id="@+id/like"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/like1"
                    app:srcCompat="@drawable/like1" />

                <ImageView
                    android:id="@+id/comment"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@id/like"
                    android:src="@drawable/commentpic"
                    app:srcCompat="@drawable/commentpic" />

            </RelativeLayout>

            <TextView
                android:fontFamily="@font/akaya_telivigala"
                android:id="@+id/likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/_10_likes"
                android:textColor="#D658B3"
                android:textColorHint="#D658B3"
                android:translationY="10dp" />

            <TextView
                android:fontFamily="@font/akaya_telivigala"
                android:id="@+id/publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/publisher"
                android:textColor="#C80993"
                android:textStyle="bold"
                android:translationY="10dp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>